# qt-waylandsink-example

./: CMakeLists.txt  README.md  main.cpp  videocontrol.cpp  videocontrol.h  videowidget.cpp  videowidget.h
